<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KerusakanFormsActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnTambahKerusakan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">
            
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_input"
                android:elevation="5dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:hintTextColor="@color/oren">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detailKerusakan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/detail_kerusakan"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_input"
                android:elevation="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jenis_kerusakan"
                    android:textColor="?attr/colorPrimaryDark"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/radioButtonRingan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rusak_ringan" />

                <RadioButton
                    android:id="@+id/radioButtonSedang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rusak_sedang" />

                <RadioButton
                    android:id="@+id/radioButtonBerat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rusak_berat" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_input"
                android:elevation="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="3dp"
                    android:elevation="5dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:hintTextColor="@color/oren">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/jmlKerusakan"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/jumlah_kerusakan"
                        android:inputType="number"
                        android:numeric="integer"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btnPlus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_add_24"
                    tools:srcCompat="@drawable/ic_baseline_add_24" />

                <ImageButton
                    android:id="@+id/btnMinus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_remove_24"
                    tools:srcCompat="@drawable/ic_baseline_remove_24" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_input"
                android:elevation="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/satuan"
                    android:textColor="?attr/colorPrimaryDark"
                    android:textSize="13sp" />

                <Spinner
                    android:id="@+id/spinnerSatuan"
                    style="@style/Widget.AppCompat.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownSelector="@color/oren"
                    android:elevation="5dp"
                    android:minHeight="48dp"
                    android:popupBackground="@drawable/bg_input"
                    android:prompt="@string/pilih_satuan" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnTambahKerusakan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tombol_add"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>