<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:map="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".KoordinatLokasiPengungsiActivity" >

<fragment
    android:id="@+id/koordinatPengungsiMap"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    map:layout_constraintBottom_toTopOf="parent"
    map:layout_constraintEnd_toEndOf="parent"
    map:layout_constraintStart_toStartOf="parent"
    map:layout_constraintTop_toTopOf="parent"/>

<SearchView
    android:id="@+id/searchViewLocPengungsi"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="10dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/bg_input"
    map:layout_constraintEnd_toEndOf="parent"
    map:layout_constraintHorizontal_bias="0.0"
    map:layout_constraintStart_toStartOf="parent"
    map:layout_constraintTop_toTopOf="parent" />

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/myLocButton1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:clickable="true"
    android:contentDescription="@string/lokasi_saya"
    android:src="@drawable/ic_my_location_abu"
    map:backgroundTint="@color/white"
    map:layout_constraintBottom_toTopOf="@+id/linearLayout9"
    map:layout_constraintEnd_toEndOf="parent" />

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="8dp"
    android:clickable="true"
    android:src="@drawable/ic_arrow_back"
    map:backgroundTint="@color/white"
    map:layout_constraintBottom_toTopOf="@+id/linearLayout9"
    map:layout_constraintStart_toStartOf="parent" />

<LinearLayout
    android:id="@+id/linearLayout9"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    map:layout_constraintBottom_toBottomOf="parent"
    map:layout_constraintEnd_toEndOf="parent"
    map:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_input"
        android:elevation="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/koordinat"
            android:textColor="#757575"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/latLocPengungsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textColor="#757575"
            android:textSize="13sp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/longLocPengungsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textColor="#757575"
            android:textSize="13sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_input"
        android:elevation="5dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#757575"
            map:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNameLokPengungsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_lokasi"
                android:textSize="14sp"
                android:textColorHint="#757575"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#757575"
            map:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDetLokPengungsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_lokasi"
                android:minLines="3"
                android:textSize="14sp"
                android:textColorHint="#757575"/>
        </com.google.android.material.textfield.TextInputLayout>

<!--        <EditText-->
<!--            android:id="@+id/editTextDetLokPengungsi"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:ems="10"-->
<!--            android:minLines="3"-->
<!--            android:hint="Jorong..."-->
<!--            android:inputType="text"-->
<!--            android:textSize="13sp" />-->

    </LinearLayout>

    <Button
        android:id="@+id/btnNextKoordinat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tombol_next"
        android:textColor="@color/white" />

</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>